--- a/accesoires.html
+++ b/accesoires.html
@@ -84,25 +84,24 @@
 			<div class="col-xs-3">
 				<img class="img-cha-1" src="img/chanel_bag.png" height="115" width="201" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>CHANEL 
+						SAC TOILE 
+							100€ 
+							</p>
 						</div>
 			</div>
 			<div class="col-xs-3">
 				<img class="img-cha-2" src="img/miu.png" height="126" width="198" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>MIU MIU 
+						PORTEFEUILLE 100€</p>
 						</div>
 			</div>
 			<div class="col-xs-3">
 				<img src="img/dior.png" height="214" width="167" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>DIOR SAC 
+						LADY DIOR 100€</p>
 						</div>
 			</div>
 		</div>
@@ -128,26 +127,20 @@
 			<div class="col-xs-3">
 				<img class="img-cha-4" src="img/chanel_watch.png" height="171" width="229" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>CHANEL MONTRE PREMIÈRE 100€</p>
 						</div>
 			</div>
 			<div class="col-xs-3">
 				<img class="img-cha-5" src="img/chanel_red.png" height="133" width="201" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>CHANEL SAC CLASSIQUE 2.5 100€</p>
 						</div>
 
 			</div>
 			<div class="col-xs-3">
 				<img class="img-cha-6" src="img/dior_lune.png" height="98" width="197" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>DIOR LUNETTES SO REAL  100€</p>
 						</div>
 			</div>
 		</div>
@@ -160,25 +153,19 @@
 			<div class="col-xs-3">
 				<img src="img/loewe.png" height="198" width="221" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>LOEWE SAC AMAZONA 100€</p>
 						</div>
 			</div>
 			<div class="col-xs-3">
 				<img class="img-cha-8" src="img/hermes.png" height="175" width="175" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>HERMÉS CARRÉ DE SOIE 100€</p>
 						</div>
 			</div>
 			<div class="col-xs-3">
 				<img class="img-cha-9" src="img/ysl.png" height="190" width="196" alt="">
 				<div class="col-xs-6 col-xs-offset-3 ">
-						<p>DÉFILÉ DE MARQUES
-							171 Rue de Grenelle
-							75007, Paris</p>
+						<p>YSL CABAS CHYC 100€</p>
 						</div>
 			</div>
 		</div>
